--- a/Workbook.ipynb
+++ b/Workbook.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,161 @@
       "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 5
     }
    ],
    "source": [
     "cursor.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
     "* FROM facts WHERE area > 4000;\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "cursor.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
+    "area FROM facts WHERE area > 4000;\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "cursor.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
+    "* FROM facts WHERE name = 'Czech Republic';\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "conn.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
+    "* FROM facts WHERE name = 'Czech Republic';\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(0, 0, 0, 'SEARCH TABLE facts USING INTEGER PRIMARY KEY (rowid=?)')]"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "conn.execute(\"EXPLAIN QUERY PLAN SELECT * \\\n",
+    "FROM facts WHERE id = 20;\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(0, 0, 0, 'SEARCH TABLE facts USING INDEX pop_idx (population>?)')]"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "conn.execute(\"EXPLAIN QUERY PLAN SELECT * FROM facts WHERE (population > 1000000) AND (population_growth < 0.05);\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[]"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "conn.execute(\"CREATE INDEX pop_idex ON facts(population);\").fetchall()\n",
+    "conn.execute(\"CREATE INDEX pop_growth_idx ON facts(population_growth);\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[(0,\n  0,\n  0,\n  'SEARCH TABLE facts USING INDEX pop_growth_idx (population_growth<?)')]"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "conn.execute(\"EXPLAIN QUERY PLAN SELECT *  FROM facts WHERE (population > 1000000) AND (population_growth < 0.05);\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<sqlite3.Cursor at 0x27d03870570>"
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "conn.execute(\"CREATE INDEX pop_pop_growth_ix ON facts(population,population_growth);\").fetchall()"
    ]
   },
   {
@@ -95,72 +244,14 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
+      "text/plain": "[(0, 0, 0, 'SEARCH TABLE facts USING INDEX pop_pop_growth_ix (population>?)')]"
      },
      "metadata": {},
      "execution_count": 16
     }
    ],
    "source": [
-    "cursor.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
-    "area FROM facts WHERE area > 4000;\").fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
-     },
-     "metadata": {},
-     "execution_count": 19
-    }
-   ],
-   "source": [
-    "cursor.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
-    "* FROM facts WHERE name = 'Czech Republic';\").fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[(0, 0, 0, 'SCAN TABLE facts')]"
-     },
-     "metadata": {},
-     "execution_count": 20
-    }
-   ],
-   "source": [
-    "conn.execute(\"EXPLAIN QUERY PLAN SELECT \\\n",
-    "* FROM facts WHERE name = 'Czech Republic';\").fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[(0, 0, 0, 'SEARCH TABLE facts USING INTEGER PRIMARY KEY (rowid=?)')]"
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
-   "source": [
-    "conn.execute(\"EXPLAIN QUERY PLAN SELECT * \\\n",
-    "FROM facts WHERE id = 20;\").fetchall()"
+    "conn.execute(\"EXPLAIN QUERY PLAN SELECT * FROM facts WHERE (population > 1000000 ) AND (population_growth < 0.05);\").fetchall()"
    ]
   },
   {
@@ -168,7 +259,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "conn.execute(\"SELECT population,population_growth FROM facts WHERE (population > 1000000) AND (population_growth < 0.05);\")"
+   ]
   }
  ]
 }
